# proxy_auth

./: .gitignore  README.md  config.yaml  pyproject.toml
proxy_auth/: admin.py  app.py  auth.py  models.py
proxy_auth/templates/: admin.html  base.html  hello.html  index.html  login.html
